syntax = "proto3";

package rid;

service HelloService {
  rpc SayHello1 (HelloRequest) returns (HelloReply) {}
  rpc SayHello2 (HelloRequest) returns (HelloReply) {}
  rpc SayHello3 (HelloRequest) returns (HelloReply) {}
  rpc SayHello4 (HelloRequest) returns (HelloReply) {}
  rpc SayHello5 (HelloRequest) returns (HelloReply) {}
  rpc SayHello6 (HelloRequest) returns (HelloReply) {}
  rpc SayHello7 (HelloRequest) returns (HelloReply) {}
  rpc SayHello8 (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message1 = 1;
  string message2 = 2;
}
